--- a/sass/utils/_functions.scss
+++ b/sass/utils/_functions.scss
@@ -1,19 +1,3 @@
-// Enlever les unités
-@function strip-units($number) {
-  @return $number / ($number * 0 + 1);
-}
-// px to rem
-@function rem($size) {
-  @return $size / ($font-size-base) * 1rem;
-}
-// rem to px
-@function rem-to-px($size) {
-  $value: strip-units($size) * ($font-size-base);
-  @return round($value);
-}
-
-
-
 // Calcul de la couleur de la font selon son background
 @function getFontColor($background-colour){
   @if ( lightness($background-colour) > 60 ) {
